@@ -1,12 +1,18 @@
-MD5 d7e112d375ae9a4ae3281a2feabc7676 ChangeLog 397
-RMD160 699a0a5aba24b99fb4522e0bcc8b64f0b97be0e6 ChangeLog 397
-SHA256 d90908926a7dfe7fe555eb6827518e99ba7a7a1ebe6c1f8ab9c7b4c387ce892d ChangeLog 397
+MD5 9025dfb94532e3388034b1eee0be1498 ChangeLog 513
+RMD160 8f63e6879aa5b573a8a2247c18dec1d9627f4698 ChangeLog 513
+SHA256 06747b5335e91efbc2d42147d5d093ac72f5b35bca1eb259836939c5c117c79c ChangeLog 513
 MD5 d24ff0e0080318bb108db0524341bd98 files/digest-wop-0.4.1 506
 RMD160 85761762d654857faa4afeb4b826dbfbb8a01188 files/digest-wop-0.4.1 506
 SHA256 888312fcc57c30d83f33247debd059f91f2f80505c86afd28110c17702b3c149 files/digest-wop-0.4.1 506
+MD5 bd9cefee348a7bc0f541f2b18b4bd7aa files/digest-wop-0.4.2 506
+RMD160 bd71dc3ad5c11a1e6211983d6adfbba7d00b418a files/digest-wop-0.4.2 506
+SHA256 ea5bed384a6d826f42ffea726db49b9191eb8610cd2d281b3de9fdde96a1b50b files/digest-wop-0.4.2 506
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
 MD5 64cb211ffa761080606ec8084bedbcf4 wop-0.4.1.ebuild 1539
 RMD160 53025fcb3f17e6b20090a600edf772b695bb09ce wop-0.4.1.ebuild 1539
 SHA256 79f419170e57b7adf17cb66d4b064514d4d716708cf93013512b076850f03b2c wop-0.4.1.ebuild 1539
+MD5 5ee3439d2f44c0af700408314465eabc wop-0.4.2.ebuild 1539
+RMD160 acb360abc90a6e5b460a467fd52cb1b5ba469e49 wop-0.4.2.ebuild 1539
+SHA256 ed9cbd980d1ef5a950bb57b440016ef0aa68dda215cdc36b07a0a277cd919aeb wop-0.4.2.ebuild 1539
