@@ -1,0 +1,6 @@
+MD5 fc2567427b8970299f88df1d45aa106b wop-0.4.2-src.tar.bz2 280715
+RMD160 202c349613041076af5580d86b5ab6f091359ed8 wop-0.4.2-src.tar.bz2 280715
+SHA256 f4021736d56db32149751df74be4c70be86c09dc48ceb5c5ecce028459c1be8f wop-0.4.2-src.tar.bz2 280715
+MD5 0bf42f28e03dcac5c8066b46d7733907 wopdata-2005-12-21.tar.bz2 4217006
+RMD160 3ea35cca0b28bbd0ff278899b5cc1d8dd83e0602 wopdata-2005-12-21.tar.bz2 4217006
+SHA256 cd6b8eb9f77f709d7a52b913d8a665bd202c53ceca9cf96b4c9f9adc17d8a6b2 wopdata-2005-12-21.tar.bz2 4217006
